Fixed spacing

--- a/style.css
+++ b/style.css
@@ -2,11 +2,20 @@ html, body, #content {
     width: 100%; height: 100%; margin: 0;
     font-family: 'Roboto', sans-serif;
 }
+table, tr, td {
+    border-spacing: 0;
+    border-collapse: collapse;
+    border: none;
+    left: 0;
+    right: 0;
+    top: 0;
+}
 h2 {
     font-weight: 400;
 }
 .content {
     width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 .appBar {
